<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openspot_teleop_kb</name>
  <version>1.0.0</version>
  <description>openspot teleoperation by keyboard</description>
  <maintainer email="yandy.ding@gmail.com">yandy</maintainer>
  <license>BSD License 2.0</license>

  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
